force-app/main/default/objects/Payments__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>BillingStreet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>