force-app/main/default/objects/Payments__c/fields/Cancellation_date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_date__c</fullName>
    <label>Cancellation date</label>
    <type>DateTime</type>
</CustomField>