force-app/main/default/objects/Payments__c/fields/Check_Payment_On_Account__c.field-meta.xml
<CustomField>
    <fullName>Check_Payment_On_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Payment On Account</label>
    <type>Checkbox</type>
</CustomField>