force-app/main/default/objects/Payments__c/fields/Full_Period_Payment__c.field-meta.xml
<CustomField>
    <fullName>Full_Period_Payment__c</fullName>
    <formula>IF( Amount__c =  Subscriptions__r.Plan_Amount__c  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Period Payment</label>
    <type>Checkbox</type>
</CustomField>