force-app/main/default/objects/Payments__c/fields/Invoice_created__c.field-meta.xml
<CustomField>
    <fullName>Invoice_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice created</label>
    <type>Checkbox</type>
</CustomField>