force-app/main/default/objects/Payments__c/fields/IsInsertOrder__c.field-meta.xml
<CustomField>
    <fullName>IsInsertOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInsertOrder</label>
    <type>Checkbox</type>
</CustomField>