force-app/main/default/objects/Payments__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Draft - Bobehandling</fullName>
            </value>
            <value>
                <fullName>Cancellation mail sent</fullName>
            </value>
            <value>
                <fullName>Cancellation advisor responsible</fullName>
            </value>
            <value>
                <fullName>Cancellation management responsible</fullName>
            </value>
            <value>
                <fullName>Canceled – Refund</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Followup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>