force-app/main/default/objects/Payments__c/fields/Payment_link__c.field-meta.xml
<CustomField>
    <fullName>Payment_link__c</fullName>
    <label>Payment link</label>
    <type>Url</type>
</CustomField>