force-app/main/default/objects/Payments__c/fields/Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>