force-app/main/default/objects/Payments__c/fields/Reepay_invoice_link__c.field-meta.xml
<CustomField>
    <fullName>Reepay_invoice_link__c</fullName>
    <label>Reepay invoice link</label>
    <type>Url</type>
</CustomField>