force-app/main/default/objects/Payments__c/fields/Refunded_Date__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Date__c</fullName>
    <label>Refunded Date</label>
    <type>DateTime</type>
</CustomField>