force-app/main/default/objects/Payments__c/fields/Settle_date__c.field-meta.xml
<CustomField>
    <fullName>Settle_date__c</fullName>
    <label>Settle date</label>
    <type>DateTime</type>
</CustomField>