force-app/main/default/objects/Payments__c/fields/Subscription_link__c.field-meta.xml
<CustomField>
    <fullName>Subscription_link__c</fullName>
    <label>Subscription link</label>
    <type>Url</type>
</CustomField>