force-app/main/default/objects/Payments__c/fields/Subscription_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Plan_Amount__c</fullName>
    <formula>Subscriptions__r.Plan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Plan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>