force-app/main/default/objects/Payments__c/fields/Subscription_status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_status__c</fullName>
    <label>Subscription status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscription Created</fullName>
            </value>
            <value>
                <fullName>Subscription Approved</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>No subscription included</fullName>
            </value>
            <value>
                <fullName>Subscription included</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>