force-app/main/default/objects/Payments__c/fields/Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriptions</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>